--- a/ansible/asymmetric-routing.yml
+++ b/ansible/asymmetric-routing.yml
@@ -4,18 +4,18 @@
   hosts: router1
   become: true
   tasks:
-  - name: Disable rp_filter for all and on eth1
+  - name: Disable rp_filter for all and on vlan11
     ansible.builtin.sysctl:
       name: "{{ item }}"
       value: "0"
       state: present
     with_items:
       - net.ipv4.conf.all.rp_filter
-      - net.ipv4.conf.eth1.rp_filter
+      - net.ipv4.conf.vlan11.rp_filter
   roles:
     - role: frr-instance
       frr_interfaces:
-        eth1:
+        vlan11:
           ip: 10.0.10.1/30
           description: r1-r2
           other:
@@ -23,7 +23,7 @@
             - "ip ospf cost 1000"
             - "ip ospf hello-interval 10"
             - "ip ospf dead-interval 30"
-        eth2:
+        vlan10:
           ip: 10.0.12.1/30
           description: r1-r3
           other:
@@ -31,7 +31,7 @@
             - "ip ospf cost 45"
             - "ip ospf hello-interval 10"
             - "ip ospf dead-interval 30"
-        eth3:
+        eth2:
           ip: 192.168.10.1/24
           description: net_router1
           other:
@@ -58,11 +58,11 @@
       state: present
     with_items:
       - net.ipv4.conf.all.rp_filter
-      - net.ipv4.conf.eth2.rp_filter
+      - net.ipv4.conf.vlan12.rp_filter
   roles:
     - role: frr-instance
       frr_interfaces:
-        eth1:
+        vlan11:
           ip: 10.0.10.2/30
           description: r1-r2
           other:
@@ -70,7 +70,7 @@
             - "ip ospf cost 45"
             - "ip ospf hello-interval 10"
             - "ip ospf dead-interval 30"
-        eth2:
+        vlan12:
           ip: 10.0.11.2/30
           description: r2-r3
           other:
@@ -78,7 +78,7 @@
             - "ip ospf cost 45"
             - "ip ospf hello-interval 10"
             - "ip ospf dead-interval 30"
-        eth3:
+        eth2:
           ip: 192.168.20.1/24
           description: net_router2
           other:
@@ -93,41 +93,3 @@
               - 10.0.10.0/30
               - 10.0.11.0/30
               - 192.168.20.0/24
-
-# - name: Prepare router3
-#   hosts: router3
-#   become: true
-#   roles:
-#     - role: frr-instance
-#       frr_interfaces:
-#         eth1:
-#           ip: 10.0.11.1/30
-#           description: r2-r3
-#           other:
-#             - "ip ospf mtu-ignore"
-#             - "ip ospf cost 45"
-#             - "ip ospf hello-interval 10"
-#             - "ip ospf dead-interval 30"
-#         eth2:
-#           ip: 10.0.12.2/30
-#           description: r1-r3
-#           other:
-#             - "ip ospf mtu-ignore"
-#             - "ip ospf cost 45"
-#             - "ip ospf hello-interval 10"
-#             - "ip ospf dead-interval 30"
-#         eth3:
-#           ip: 192.168.30.1/24
-#           description: net_router3
-#           other:
-#             - "ip ospf mtu-ignore"
-#             - "ip ospf cost 45"
-#             - "ip ospf hello-interval 10"
-#             - "ip ospf dead-interval 30"
-#       frr_ospf:
-#         areas:
-#           0:
-#             networks:
-#               - 10.0.11.0/30
-#               - 10.0.12.0/30
-#               - 192.168.30.0/24
